--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -6,11 +6,19 @@
 	<link rel="stylesheet" href="../static/css/sidebar.css">
 </head>
 <body>
-	<div id="nav-bar">
+<div id="nav-bar">
 	<input id="nav-toggle" type="checkbox"/>
 	<div id="nav-header">
-		<label for="nav-toggle"><span id="nav-toggle-burger"></span></label>
-		<a id="nav-title" href="#" target="_blank">C<i class="fab fa-codepen"></i>DEPEN</a>
+		<div id="nav-title" style="display: flex; justify-content: center; align-items: center">
+			<label>
+				<img style="color: white; width: 25px; height: auto;"
+				     src="../static/img/music_note_white.png" alt="">
+			</label>
+			<a style="padding-left: 10px; font-size: 20px; font-family: 'Satisfy', cursive; font-weight: 300;" href="/">
+				Breaking Sounds
+			</a>
+		</div>
+		<label for="nav-toggle"><span id="nav-toggle-burger" style="rotate: 180deg"></span></label>
 		<hr/>
 	</div>
 	<div id="nav-content">
