--- a/templates/header.html
+++ b/templates/header.html
@@ -85,13 +85,13 @@
 					<div class="left"></div>
 					<div class="right"></div>
 				</div>
-				<li class="nav-item active">
+				<li id="head1" class="nav-item">
 					<a class="nav-link" href="javascript:void(0);"><i class="fas fa-tachometer-alt"></i>Dashboard</a>
 				</li>
-				<li class="nav-item">
-					<a class="nav-link" href="javascript:void(0);"><i class="far fa-address-book"></i>Address Book</a>
+				<li id="head2" class="nav-item">
+					<a class="nav-link" href="/home"><i class="far fa-address-book"></i>Address Book</a>
 				</li>
-				<li class="nav-item">
+				<li id="head3" class="nav-item">
 					<a class="nav-link" href="javascript:void(0);"><i class="far fa-clone"></i>Components</a>
 				</li>
 				<li class="nav-item">
