--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-{% include 'header.html' %}
+{% include 'sidebar.html' %}
+
 <html>
 <head>
 	<meta charset="utf-8">
@@ -22,7 +23,7 @@
 	<script src="../static/js/"></script>
 	<script src="../static/js/respond.min.js"></script>
 	<script>
-		const element = document.getElementById('head1');
+		const element = document.getElementById('head2');
 		element.classList.add('active');
 	</script>
 </head>
