--- a/templates/Login_Page.html
+++ b/templates/Login_Page.html
@@ -35,7 +35,7 @@
 <div style="position:fixed; display: flex; top: 10px; left: 20px; z-index: 3;">
 	<label>
 		<img style="color: white; width: 55px; height: 50px; padding-left: 20px"
-		     src="../static/img/music_note_white.png">
+		     src="../static/logo/music_note_white.png">
 	</label>
 	<a style="padding-left: 10px; display: flex; align-items:center;font-size: 28px; text-decoration: none; font-family: 'Satisfy', cursive; font-weight: 300;"
 	   href="/">Breaking Sounds</a>
@@ -55,7 +55,7 @@
 				</p>
 				<a href="javascript:void(0)" id="loginBtn" class="btn btn_rounded">Log in</a>
 				<br>
-				<a href="/login" id="google">Continue with Google
+				<a href="/login_gg" id="google">Continue with Google
 					<label>
 						<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
 						     class="bi bi-google" viewBox="0 0 16 16">
