--- a/static/css/header.css
+++ b/static/css/header.css
@@ -9,7 +9,7 @@
 	--navbar-dark-primary: #18283b;
 	--navbar-dark-secondary: #2c3e50;
 	--navbar-light-primary: #f5f6fa;
-	--navbar-light-secondary: #8392a5;
+	--navbar-light-secondary: #6c858c;
 }
 
 #header {
