--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,17 +3,18 @@
   font-weight: normal;
   font-style: normal;
 }
+
 body {
   font-family: "Cormorant Garamond", Georgia, serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 1.7;
   color: rgba(255, 255, 255, 0.3);
-  background: #000 url(../images/broken_noise.png) repeat;
+  background: #000 repeat;
 }
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
   body {
-    background: #000 url(../images/broken_noise.png) repeat;
+    background: #000 repeat;
   }
 }
 
@@ -62,7 +63,6 @@ p {
 }
 
 h1, h2, h3, h4, h5, h6, figure {
-  color: #000;
   font-family: "Cormorant Garamond", Georgia, serif;
   font-weight: 400;
   margin: 0 0 20px 0;
@@ -73,10 +73,6 @@ h1, h2, h3, h4, h5, h6, figure {
   background: #dfbaff !important;
 }
 
-::-webkit-selection {
-  color: #fff;
-  background: #dfbaff !important;
-}
 
 ::-moz-selection {
   color: #fff;
@@ -107,12 +103,12 @@ h1, h2, h3, h4, h5, h6, figure {
   }
 }
 .fh5co-nav.scrolled {
-  background: #000 url(../images/broken_noise.png) repeat;
+  background: #000 repeat;
   top: -82px;
 }
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
   .fh5co-nav.scrolled {
-    background: #000 url(../images/broken_noise.png) repeat;
+    background: #000 repeat;
   }
 }
 @media screen and (max-width: 480px) {
@@ -182,9 +178,9 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 .fh5co-nav ul li.has-dropdown .dropdown {
   width: 140px;
-  -webkit-box-shadow: 0px 14px 16px -9px rgba(0, 0, 0, 0.75);
-  -moz-box-shadow: 0px 14px 16px -9px rgba(0, 0, 0, 0.75);
-  box-shadow: 0px 14px 16px -9px rgba(0, 0, 0, 0.75);
+  -webkit-box-shadow: 0 14px 16px -9px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0 14px 16px -9px rgba(0, 0, 0, 0.75);
+  box-shadow: 0 14px 16px -9px rgba(0, 0, 0, 0.75);
   z-index: 1002;
   visibility: hidden;
   opacity: 0;
@@ -331,9 +327,8 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 #fh5co-header .display-tc h1,
 .fh5co-cover .display-tc h1 {
-  margin-bottom: 0px;
+  margin-bottom: 0;
   font-size: 74px;
-  font-size: 80px;
   font-weight: 700;
 }
 @media screen and (max-width: 768px) {
@@ -418,9 +413,9 @@ h1, h2, h3, h4, h5, h6, figure {
 #fh5co-header .display-tc .btn:hover,
 .fh5co-cover .display-tc .btn:hover {
   background: #dfbaff !important;
-  -webkit-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75) !important;
-  -moz-box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75) !important;
-  box-shadow: 0px 14px 30px -15px rgba(0, 0, 0, 0.75) !important;
+  -webkit-box-shadow: 0 14px 30px -15px rgba(0, 0, 0, 0.75) !important;
+  -moz-box-shadow: 0 14px 30px -15px rgba(0, 0, 0, 0.75) !important;
+  box-shadow: 0 14px 30px -15px rgba(0, 0, 0, 0.75) !important;
 }
 #fh5co-header .display-tc .form-inline .form-group,
 .fh5co-cover .display-tc .form-inline .form-group {
@@ -500,7 +495,7 @@ h1, h2, h3, h4, h5, h6, figure {
   }
 }
 #fh5co-featured-menu .fh5co-item h3, #fh5co-gallery .fh5co-item h3, #fh5co-reservation-form .fh5co-item h3 {
-  margin-bottom: 0px;
+  margin-bottom: 0;
   color: #fff;
 }
 #fh5co-featured-menu .fh5co-item .fh5co-price, #fh5co-gallery .fh5co-item .fh5co-price, #fh5co-reservation-form .fh5co-item .fh5co-price {
@@ -607,7 +602,7 @@ h1, h2, h3, h4, h5, h6, figure {
 
 #fh5co-slider-wrwap {
   height: 500px !important;
-  background: url(../images/loader.gif) no-repeat center center;
+  background: no-repeat center center;
 }
 #fh5co-slider-wrwap .btn {
   font-size: 24px;
@@ -661,7 +656,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 @media screen and (max-width: 992px) {
   #fh5co-slider-wrwap .flexslider .slider-text-bg {
-    margin-left: 0px;
+    margin-left: 0;
   }
 }
 #fh5co-slider-wrwap .flexslider .slider-text-bg .desc {
@@ -836,7 +831,7 @@ h1, h2, h3, h4, h5, h6, figure {
   width: 2px;
   background: #434343;
   left: 50%;
-  margin-left: 0px;
+  margin-left: 0;
 }
 @media screen and (max-width: 768px) {
   #fh5co-timeline .timeline:before {
@@ -1069,9 +1064,9 @@ h1, h2, h3, h4, h5, h6, figure {
   padding: 30px;
   float: left;
   background: rgba(255, 255, 255, 0.03);
-  -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.06);
-  -moz-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.06);
-  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.06);
+  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.06);
+  -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.06);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.06);
   -webkit-transition: 0.3s;
   -o-transition: 0.3s;
   transition: 0.3s;
@@ -1129,14 +1124,14 @@ h1, h2, h3, h4, h5, h6, figure {
 .fh5co-portfolio > a {
   width: 100%;
   float: left;
-  -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.06);
-  -moz-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.06);
-  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.06);
+  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.06);
+  -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.06);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.06);
 }
 .fh5co-portfolio > a:hover {
-  webkit-box-shadow: 0px 8px 16px -4px rgba(0, 0, 0, 0.13);
-  -moz-box-shadow: 0px 8px 16px -4px rgba(0, 0, 0, 0.13);
-  box-shadow: 0px 8px 16px -4px rgba(0, 0, 0, 0.13);
+  webkit-box-shadow: 0 8px 16px -4px rgba(0, 0, 0, 0.13);
+  -moz-box-shadow: 0 8px 16px -4px rgba(0, 0, 0, 0.13);
+  box-shadow: 0 8px 16px -4px rgba(0, 0, 0, 0.13);
 }
 .fh5co-portfolio .portfolio-entry {
   width: 100%;
@@ -1186,9 +1181,9 @@ h1, h2, h3, h4, h5, h6, figure {
   padding: 30px;
   border-radius: 5px;
   margin-bottom: 30px;
-  -webkit-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.06);
-  -moz-box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.06);
-  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.06);
+  -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.06);
+  -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.06);
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.06);
 }
 @media screen and (max-width: 768px) {
   .fh5co-team {
@@ -1205,7 +1200,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 .fh5co-team figure {
   position: relative;
-  top: 0px;
+  top: 0;
   background-size: cover;
   margin-bottom: 20px;
 }
@@ -1315,10 +1310,9 @@ h1, h2, h3, h4, h5, h6, figure {
   position: absolute;
   z-index: 1901;
   width: 270px;
-  background: #000 url(../images/broken_noise.png) repeat;
+  background: #000 repeat;
   top: 0;
   right: 0;
-  top: 0;
   bottom: 0;
   padding: 75px 40px 40px 40px;
   overflow-y: auto;
@@ -1334,7 +1328,7 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 @media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
   #fh5co-offcanvas {
-    background: #000 url(../images/broken_noise.png) repeat;
+    background: #000 repeat;
   }
 }
 @media screen and (max-width: 768px) {
@@ -1374,8 +1368,8 @@ h1, h2, h3, h4, h5, h6, figure {
 }
 #fh5co-offcanvas ul li.offcanvas-has-dropdown > a:after {
   position: absolute;
-  right: 0px;
-  font-family: 'icomoon';
+  right: 0;
+  font-family: 'icomoon', serif;
   speak: none;
   font-style: normal;
   font-weight: normal;
@@ -1411,7 +1405,7 @@ h1, h2, h3, h4, h5, h6, figure {
 .gototop {
   position: fixed;
   bottom: 20px;
-  right: 20px;
+  left: 50px;
   z-index: 999;
   opacity: 0;
   visibility: hidden;
@@ -1530,16 +1524,14 @@ h1, h2, h3, h4, h5, h6, figure {
 
 .fh5co-nav-toggle {
   position: absolute;
-  right: 0px;
+  right: 0;
   top: 65px;
   z-index: 21;
   padding: 6px 0 0 0;
   display: block;
   margin: 0 auto;
-  display: none;
   height: 44px;
   width: 44px;
-  z-index: 2001;
   border-bottom: none !important;
 }
 @media screen and (max-width: 768px) {
@@ -1584,10 +1576,10 @@ h1, h2, h3, h4, h5, h6, figure {
   border-color: #ec3e44 !important;
 }
 .btn-primary.btn-outline {
-  -webkit-border-radius: 0px;
-  -moz-border-radius: 0px;
-  -ms-border-radius: 0px;
-  border-radius: 0px;
+  -webkit-border-radius: 0;
+  -moz-border-radius: 0;
+  -ms-border-radius: 0;
+  border-radius: 0;
   background: transparent;
   color: #fff;
   text-transform: uppercase;
@@ -1698,7 +1690,7 @@ h1, h2, h3, h4, h5, h6, figure {
   visibility: hidden;
   opacity: 0;
   position: absolute;
-  right: 0px;
+  right: 0;
   top: 50%;
   margin-top: -8px;
   -webkit-transition: 0.2s;
@@ -1760,12 +1752,12 @@ textarea {
 
 .fh5co-loader {
   position: fixed;
-  left: 0px;
-  top: 0px;
+  left: 0;
+  top: 0;
   width: 100%;
   height: 100%;
   z-index: 9999;
-  background: url(../images/loader.gif) center no-repeat #fff;
+  background:  center no-repeat #fff;
 }
 
 .js .animate-box {
