--- a/templates/support/change_password.html
+++ b/templates/support/change_password.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-{% include 'header.html' %}
+{% include 'support/header.html' %}
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
 	<title>Change Password</title>
 	<style>
 		body {
-			background-image: url("../static/img/a5.avif"); /* Đổi thành đường dẫn ảnh của bạn */
+			background-image: url("/static/img/a5.avif"); /* Đổi thành đường dẫn ảnh của bạn */
 			background-size: cover; /* Ảnh sẽ được giãn ra để phủ kín toàn bộ màn hình */
 			background-position: center; /* Căn giữa ảnh */
 			background-repeat: no-repeat; /* Không lặp lại ảnh */
@@ -38,7 +38,6 @@
 		.mainDiv {
 			display: flex;
 			min-height: 100%;
-			min-height: 100%;
 			align-items: center;
 			justify-content: center;
 			font-family: 'Open Sans', sans-serif;
@@ -49,7 +48,7 @@
 			border-color: white;
 			background: #fff;
 			padding: 36px 0;
-			border-radius: 4px;
+			border-radius: 15px;
 			margin: 150px 0;
 			box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.25);
 		}
@@ -86,7 +85,6 @@
 			height: 40px;
 			font-size: 16px;
 			border-radius: 4px;
-			border: none;
 			border: solid 1px #ccc;
 			padding: 0 11px;
 		}
@@ -125,7 +123,7 @@
 		#loader {
 			position: absolute;
 			z-index: 1;
-			margin: -2px 0 0 10px;
+			margin: 3px 0 0 10px;
 			border: 4px solid #f3f3f3;
 			border-radius: 50%;
 			border-top: 4px solid #666666;
@@ -219,7 +217,7 @@
 <div class="mainDiv">
 	<div class="cardStyle">
 		<form id="changePassForm">
-			<img src="../static/img/music_note.png" id="signupLogo" alt=""/>
+			<img src="../static/logo/music_note.png" id="signupLogo" alt=""/>
 			
 			<h2 class="formTitle">
 				Create new Password
@@ -290,4 +288,4 @@
 </script>
 </body>
 </html>
-{% include 'footer.html' %}
+{% include 'support/footer.html' %}
