--- a/templates/support/header.html
+++ b/templates/support/header.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Breaking Sounds</title>
-	<link rel="icon" href="../static/logo/music_note_white.png">
-	<link rel="stylesheet" href="../static/css/header.css">
+	<link rel="icon" href="/static/logo/music_note_white.png">
+	<link rel="stylesheet" href="/static/css/header.css">
 	<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
@@ -107,7 +107,7 @@
 <div id="header">
 	<nav class="navbar navbar-expand-custom navbar-mainbg" style="border: 0 !important; margin-bottom: 0 !important;">
 		<label><img style="color: white; width: 55px; height: 50px; padding-left: 20px"
-		            src="../static/logo/music_note_white.png"></label>
+		            src="/static/logo/music_note_white.png"></label>
 		<a class="logo" href="/">Breaking Sounds</a>
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav ml-auto" id="ml-auto" style="margin-left: 200px !important;">
