--- a/templates/Login_Page.html
+++ b/templates/Login_Page.html
@@ -35,7 +35,7 @@
 <div style="position:fixed; display: flex; top: 10px; left: 20px; z-index: 3;">
 	<label>
 		<img style="color: white; width: 55px; height: 50px; padding-left: 20px"
-		     src="../static/logo/music_note_white.png">
+		     src="../static/logo/music_note_white.png" alt="">
 	</label>
 	<a style="padding-left: 10px; display: flex; align-items:center;font-size: 28px; text-decoration: none; font-family: 'Satisfy', cursive; font-weight: 300;"
 	   href="/">Breaking Sounds</a>
