--- a/templates/support/header.html
+++ b/templates/support/header.html
@@ -88,7 +88,7 @@
 			var path = window.location.pathname.split("/").pop();
 			console.log("Current path:", path); // Debug xem path có đúng không
 			
-			if (path == '') {
+			if (path === '') {
 				path = 'index.html';
 			}
 			
@@ -100,14 +100,17 @@
 				target.parent().addClass('active'); // Gán active cho mục đúng
 			}
 		});
+		
 	
 	</script>
 </head>
 <body>
 <div id="header">
 	<nav class="navbar navbar-expand-custom navbar-mainbg" style="border: 0 !important; margin-bottom: 0 !important;">
-		<label><img style="color: white; width: 55px; height: 50px; padding-left: 20px"
-		            src="/static/logo/music_note_white.png"></label>
+		<label>
+			<img style="color: white; width: 55px; height: 50px; padding-left: 20px"
+		            src="/static/logo/music_note_white.png" alt="">
+		</label>
 		<a class="logo" href="/">Breaking Sounds</a>
 		<div class="collapse navbar-collapse" id="navbarSupportedContent">
 			<ul class="navbar-nav ml-auto" id="ml-auto" style="margin-left: 200px !important;">
@@ -119,7 +122,9 @@
 					<a class="nav-link" href="/"><i class="fas fa-tachometer-alt"></i>Dashboard</a>
 				</li>
 				<li id="head2" class="nav-item">
-					<a class="nav-link" href="/home"><i class="far fa-address-book"></i>Address Book</a>
+					<a class="nav-link" href="/pitch_detector">
+						<i class="fas fa-music"></i>Pitch detector
+					</a>
 				</li>
 				<li id="head3" class="nav-item">
 					<a class="nav-link" href="/generate">
@@ -127,10 +132,10 @@
 					</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="javascript:void(0);"><i class="far fa-calendar-alt"></i>Calendar</a>
+					<a class="nav-link" href="/sheet_view"><i class="fas fa-eye"></i>Sheet Viewer</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" href="javascript:void(0);"><i class="far fa-chart-bar"></i>Charts</a>
+					<a class="nav-link" href="{{ url_for('loginbase', msg_type='sheet_editor') }}"><i class="fas fa-newspaper"></i>Sheet Editor</a>
 				</li>
 			</ul>
 		</div>
