--- a/templates/support/rgbload.html
+++ b/templates/support/rgbload.html
@@ -46,17 +46,17 @@
 		}
 		
 		.bubble {
-			position: absolute;
-			width: 3px;
-			height: 3px;
-			background-color: rgb(254, 188, 188);
-			border-radius: 50%;
-			/*opacity: 0.5;*/
-			animation: size 4s linear infinite;
-			animation-delay: calc(0.15s * var(--i));
+			position: absolute !important;
+			width: 3px !important;
+			height: 3px !important;
+			background-color: rgb(254, 188, 188) !important;
+			border-radius: 50% !important;
+			/*opacity: 0.5 !important;*/
+			animation: sizes 4s linear infinite !important;
+			animation-delay: calc(0.15s * var(--i)) !important;
 		}
 		
-		@keyframes size {
+		@keyframes sizes {
 			0% {
 				filter: hue-rotate(0deg);
 			}
