--- a/templates/support/sidebar.html
+++ b/templates/support/sidebar.html
@@ -27,15 +27,14 @@
 	</div>
 	<div id="nav-content">
 		<div class="nav-button"><i class="fas fa-atom"></i><span>Generate</span></div>
-		<div class="nav-button"><i class="fas fa-images"></i><span>Assets</span></div>
-		<div class="nav-button"><i class="fas fa-thumbtack"></i><span>Pinned Items</span></div>
+		<div class="nav-button"><i class="fas fa-music"></i><span>Pitch detector</span></div>
+		<div class="nav-button"><i class="fas fa-eye"></i><span>Sheet Viewer</span></div>
 		<hr/>
 		<div class="nav-button"><i class="fas fa-archway"></i><span>Libary</span></div>
-		<div class="nav-button"><i class="fas fa-music"></i><span>Pitch detector</span></div>
+		<div class="nav-button"><i class="fas fa-thumbtack"></i><span>Pinned Items</span></div>
 		<div class="nav-button"><i class="fas fa-guitar"></i><span>Practice</span></div>
-		<div class="nav-button"><i class="fas fa-book-open"></i></i><span>Spark</span></div>
+		<div class="nav-button"><i class="fas fa-newspaper"></i><span>Sheet Editor</span></div>
 		<hr/>
-		<div class="nav-button"><i class="fas fa-gem"></i><span>Codepen Pro</span></div>
 		<div id="nav-content-highlight"></div>
 	</div>
 	<input id="nav-footer-toggle" type="checkbox"/>
@@ -62,8 +61,29 @@
 	</div>
 </div>
 <script>
-	document.querySelector(".nav-button").addEventListener("click", function () {
-		window.location.href = "/generate";
+	document.querySelectorAll(".nav-button").forEach((button, index) => {
+		const paths = [
+			"/generate",
+			"/pitch_detector",
+			"/sheet_view",
+			"/library",
+			"/sheet_editor",
+			"/practice",
+			"/spark"
+		];
+		
+		// Gán thuộc tính `data-link` cho từng button
+		button.setAttribute("data-link", paths[index]);
+		
+		// Thêm sự kiện click để chuyển trang
+		button.addEventListener("click", function () {
+			window.location.href = this.getAttribute("data-link");
+		});
+		
+		// Hiển thị link khi hover vào
+		button.addEventListener("mouseenter", function () {
+			console.log("Hover vào: " + this.getAttribute("data-link"));
+		});
 	});
 </script>
 <script>
